# digital-receptionist

src/: CMakeLists.txt  digitalreceptionist.cpp  digitalreceptionist.h  digitalreceptionist.qrc  logger.cpp  logger.h  main.cpp  webcamwidget.h
src/cognition/: detector.cpp  framecapture.cpp  framecapture.h  trainerimage.cpp  trainerimage.h
src/cognition/detector/: detailedfacedetector.cpp  facedetector.cpp
src/cognition/recognizer/: fisherfacerecognizer.cpp  fisherfacerecognizer.h
src/gui/: digitalreceptionist_gui.cpp  digitalreceptionist_gui.h  webcamwidget_gui.h
visual-control/visual-control/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  visualcontrol.cpp  visualcontrol.h  webcamwidget.cpp  webcamwidget.h
visual-control/visual-control/cognition/: Controller.h  detector.h  framecapture.cpp  framereceiver.h  recognizer.h  util.h
visual-control/visual-control/cognition/detector/: detailedfacedetector.h  facedetector.h
visual-control/visual-control/cognition/recognizer/: eigenfacerecognizer.cpp  eigenfacerecognizer.h
visual-control/visual-control/gui/: visualcontrol.cpp  visualcontrol.h  visualcontrol_gui.cpp  visualcontrol_gui.h  webcamwidget.cpp  webcamwidget.h  webcamwidget_gui.cpp  webcamwidget_gui.h
